--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -36,6 +36,10 @@ body {
   text-align:center;
 }
 
+.profile-details {
+  text-align:left;
+}
+
 .profile-image{
   width:80%;
   margin:0 auto;
@@ -65,6 +69,7 @@ body {
   right:15px;
   top:10px;
   font-size:20px;
+  cursor: pointer;
 }
 
 .repo-list {
@@ -98,6 +103,8 @@ body {
 /* ISSUES STYLES */
 .issue-container {
   margin-bottom:20px;
+  position:relative;
+  color:#000;
 }
 
 .issue-card {
