--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -128,6 +128,39 @@ body {
   justify-content: center;
 }
 
+/* MODAL STYLES */
+.modal-container {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgb(0,0,0);
+  background: rgba(0,0,0,0.5);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background:#fff;
+  color:#000;
+  border-radius:10px;
+  min-width: 500px;
+  width:60%;
+  min-height:200px;
+  position:relative;
+  display:flex;
+  flex-flow:column nowrap;
+  align-items:center;
+  justify-content: center;
+  padding:20px;
+}
+
+
+
 /* MEDIA QUERIES */
 @media (max-width:750px){
 body {
